# ratconfig

./: AGENTS.md  Cargo.toml  README.md
.beads/: config.yaml  issues.jsonl
src/: crossterm_runner.rs  editor.rs  jsonc.rs  lib.rs  migration.rs  model.rs  patch.rs  render.rs  test_support.rs  toml_adapter.rs
src/contract/: jsonc.rs  mod.rs  toml.rs
