[package]
name = "ratconfig"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Reusable Ratatui config editor for JSONC- and TOML-backed settings"
repository = "https://github.com/luccahuguet/ratconfig"

[dependencies]
crossterm = { version = "0.29", default-features = false, features = ["events"], optional = true }
jsonc-parser = { version = "0.32.3", features = ["cst", "serde"] }
ratatui = { version = "0.30.0", default-features = false, optional = true }
serde_json = "1.0"
toml = "0.9"
toml_edit = { version = "0.25.12", features = ["parse", "display"] }

[features]
default = ["ui"]
crossterm-runner = ["ui", "dep:crossterm", "ratatui/crossterm"]
ui = ["dep:ratatui"]
