[package]
name = "ratconfig"
version = "4.0.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0"
description = "Reusable Ratatui config editor for TOML-backed settings"
repository = "https://github.com/luccahuguet/ratconfig"

[dependencies]
ratatui = { version = "0.30.2", default-features = false, optional = true }
serde_json = "1.0"
toml = "1.1"
toml_edit = { version = "0.25.12", features = ["parse", "display"] }

[features]
default = ["ui"]
crossterm-runner = ["ui", "ratatui/crossterm"]
ui = ["dep:ratatui"]
